--- a/login/src/main/webapp/css/addtask.css
+++ b/login/src/main/webapp/css/addtask.css
@@ -162,4 +162,8 @@ select {
   border-radius: 4px;
   background-color: #f1f1f1;
 }
-
+body{
+background-repeat:no-repeat;
+background-position: center;
+opacity:1;
+}
