--- a/login/src/main/webapp/admincss/addtaskadmin.css
+++ b/login/src/main/webapp/admincss/addtaskadmin.css
@@ -6,8 +6,29 @@
 	text-align:center";
 	
 }
-
+.underline{
+	height:20px;
+	width:270px;
+}
 .buttonadminadd{
+	position:absolute;
+	top:5%;
+	right:15%;
+	transform: translate(-50%,-50%);
+	text-align:center";
+	font-weight ;
+	font-size:15px;
+	border-radius:5px;	
+	text-decoration:none;
+	transition:0.4s;
+	cursor:pointer;	
+	color:#ffffff;
+	font-weight:bolder;
+	font-family: "Century Gothic";
+	border-radius:50%;
+
+}
+.buttonadminadd1{
 	position:absolute;
 	top:2%;
 	right:11%;
@@ -25,6 +46,31 @@
 	font-weight:bolder;
 	font-family: "Century Gothic";
 }
+.buttonadminadd1:hover{
+	background:black;
+	color:#ffffff;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.email{
+		height:20px;
+		border-radius:50%;
+}
+.updateemail{
+		height:20px;
+		border-radius:0;
+		
+}
+.imagees{
+		height:60px;
+		border-radius:50%;
+}
+.imageess{
+		height:60px;
+	
+}
+
+
 .buttonadminremove{
 	position:absolute;
 	top:2%;
@@ -59,6 +105,30 @@
 	cursor:pointer;
 	
 }
+.water{
+	height:100px;
+}
+
+.buttonadmin1:hover{
+	
+	
+	box-shadow: 0 0 0 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.buttonadmin1{
+	
+	position:absolute;
+	right:10%;
+	color:#ffffff;
+	font-family: "Century Gothic";
+	font-weight:bolder;
+	font-size:15px;
+	border-radius:5px;	
+	text-decoration:none;
+	transition:0.4s;
+	cursor:pointer;
+	
+}
 
 .buttonadmin:hover{
 	background:black;
@@ -73,9 +143,9 @@
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .buttonadminadd:hover{
-	background:black;
-	color:#ffffff;
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+	box-shadow: 4px 4px #000080, 8px 8px #000000;
+  border-radius:40%;
 }
 
 .popupadmin{
