--- a/login/src/main/webapp/css/addtask.css
+++ b/login/src/main/webapp/css/addtask.css
@@ -1,15 +1,96 @@
 .container{
 	position:absolute;
-	
-	top:2%;
+	top:10%;
 	left:90%;
 	transform: translate(-50%,-50%);
 	text-align:center";
    
 }
 
+.tab {
+	  
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
 
+  width:100%;
+border-radius: 15px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+	font-family: "Century Gothic";
+	  font-weight: bold;
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  border-radius: 15px 50px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #0000a0;
+  color:white;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+   color:black;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
+ 
+}
+
+.water{
+	height:100px;
+}
+
+img{
+
+		height:60px;
+		border-radius:0%;
+}
+
+.button:hover{
+	background:black;
+	color:#ffffff;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.underline{
+	border-radius:0%;
+	height:20px;
+	width:280px;
+	
+}
 .button{
+    
+	top:15%;
+	right:15%;	
+	transform: translate(-50%,-50%);
+	text-align:center";
+	font-weight ;
+	font-size:15px;
+	border-radius:5px;	
+	text-decoration:none;
+	transition:0.4s;
+	cursor:pointer;	
+	color:#ffffff;
+	font-weight:bolder;
+	font-family: "Century Gothic";
+	border-radius:50%;
+
+}
+.button1{
 	
 	margin-top:50px;
 	background:#000080;
@@ -26,7 +107,7 @@
 
 
 
-.button:hover{
+.button1:hover{
 	background:black;
 	color:#ffffff;
 }
@@ -77,7 +158,29 @@
 	border-bottom-style: solid;
 	
 }
+.taskemail{
+		height:20px;
+		border-radius:0;
+		
+}
 
+
+
+.updateemail1{
+		height:20px;
+		border-radius:0;
+		
+}
+.taskdone{
+		height:20px;
+		border-radius:0;
+		
+}
+.taskpending{
+		height:20px;
+		border-radius:0;
+		
+}
 .input{
 	
 	margin:-35px;
@@ -118,6 +221,7 @@ input[type=text]:focus {
 
 .mytasks{
 	top:100%;
+	
 }
 
 TABLE {
@@ -126,6 +230,39 @@ TABLE {
   border-collapse: collapse;
   overflow: hidden; 
   
+  
+}
+
+TABLE {
+  animation-duration: 0.8s;
+  animation-name: pulse,slidein;
+  animation-direction : alternate;
+}
+
+@keyframes pulse {
+    from {
+        transform : scale(1);
+        opacity   : 1;
+    }
+    50% {
+        transform : scale(0.75);
+        opacity   : 0.25;
+    }
+    to {
+        transform : scale(1);
+        opacity   : 1;
+    }
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 TH{
@@ -162,8 +299,7 @@ select {
   border-radius: 4px;
   background-color: #f1f1f1;
 }
-body{
-background-repeat:no-repeat;
-background-position: center;
-opacity:1;
+.waterlogo{
+margin-left: 90%;
+
 }
