--- a/login/src/main/webapp/css/login-style.css
+++ b/login/src/main/webapp/css/login-style.css
@@ -1,16 +1,30 @@
 body {
    background-color: white;
-font-family: "Century Gothic";
+	font-family: "Century Gothic";
+    margin: 0;
+    padding: 0;
 }
 #container {
   width: 840px;
   margin: 40px auto;
-  margin-top: 50px;
-  
+  margin-top: 90px;
+  margin-left:450px;
+  display: block;  
 }
 
+.rememberme{
+	font-family: "Century Gothic";
+	background-color: initial;
+    cursor: default;
+    appearance: auto;
+    box-sizing: border-box;
+    padding: initial;
+    border: initial;
+     
+	
+}
 [type=submit] {
-  margin-top: 25px;
+  margin-top: 15px;
   width: 80%;
   border: 0;
   background-color: #0080FF;
@@ -22,17 +36,20 @@ font-family: "Century Gothic";
 }
 
 .login {
+   background: url(https://uataccounts.ugamsolutions.com/login.1e2c633b772c8ba20865.gif) no-repeat;
+    width: 570px;
+    height: 557px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+ display: flex;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    align-items: center;
+    
+   text-align: center;
 
- margin-left:20%;
- margin-top:30%;
-
-  width: 300px;
-  padding: 30px 60px;
-  background-color:white;
-  text-align: center;
-  border-radius: 20px 20px 20px 20px;  
-  border:solid;
-  border-color:blue;
 }
 
 .stage {
@@ -46,7 +63,7 @@ font-family: "Century Gothic";
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:#000080;
+  background-color:#282364;
 }
 
 .btn {
@@ -121,3 +138,36 @@ font-family: "Century Gothic";
     background-position: 0 0;
   }
 }
+
+img{
+padding: 80px 74px;
+
+}
+
+.cred{
+	margin-top:0;
+	border-left: 0;
+	border-right: 0;
+	border-top: 0;
+	width:250px;
+	 height:30px;
+	
+}
+
+select {
+  width: 60%;
+  padding: 7px 7px;
+  border: none;
+  border-radius: 2px;
+  background-color: #f1f1f1;
+  font-family: "Century Gothic";
+}
+
+::placeholder {
+  font-family: "Century Gothic";
+  color: #808080;
+  font-style: italic;
+}
+
+
+  
